--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,11 @@
       "outDir": "./dist",
       "strict": true,
       "esModuleInterop": true,
-      "skipLibCheck": true
+      "skipLibCheck": true,
+      "experimentalDecorators": true,
+      "emitDecoratorMetadata": true
     },
-    "include": ["src/**/*.ts"],
-    "exclude": ["node_modules"]
+    "include": ["src/**/*", "tests/**/*"],
+    "exclude": ["node_modules", "**/*.spec.ts"]
   }
   
